@@ -7,8 +7,8 @@ import com.coyjiv.isocial.domain.Friend;
 import com.coyjiv.isocial.domain.User;
 import com.coyjiv.isocial.domain.UserFriendStatus;
 import com.coyjiv.isocial.dto.respone.friend.CustomFriendResponse;
-import com.coyjiv.isocial.dto.respone.friend.CustomFriendResponse;
 import com.coyjiv.isocial.dto.respone.friend.FriendResponseDto;
+import com.coyjiv.isocial.dto.respone.page.PageWrapper;
 import com.coyjiv.isocial.exceptions.EntityNotFoundException;
 import com.coyjiv.isocial.service.subscriber.ISubscriberService;
 import com.coyjiv.isocial.service.websocket.IWebsocketService;
@@ -24,6 +24,10 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
+
+import java.util.Objects;
+
 
 @Service
 @RequiredArgsConstructor
@@ -54,13 +58,13 @@ public class FriendService implements IFriendService {
     }
 
     Optional<Friend> existingFriendship =
-      friendRepository.findByRequesterAndAddresserAndIsActive(requester.get(), addresser.get(), true);
+            friendRepository.findByRequesterAndAddresserAndIsActive(requester.get(), addresser.get(), true);
     if (existingFriendship.isPresent()) {
       return false;
     }
 
     Optional<Friend> inactiveFriendship =
-      friendRepository.findByRequesterAndAddresserAndIsActive(requester.get(), addresser.get(), false);
+            friendRepository.findByRequesterAndAddresserAndIsActive(requester.get(), addresser.get(), false);
     if (inactiveFriendship.isEmpty()) {
       inactiveFriendship = friendRepository.findByRequesterAndAddresserAndIsActive(addresser.get(), requester.get(), false);
     }
@@ -74,8 +78,8 @@ public class FriendService implements IFriendService {
     }
 
     if (friendRepository.existsByRequesterAndAddresserAndIsActive(requester.get(), addresser.get(), true)
-      ||
-      friendRepository.existsByRequesterAndAddresserAndIsActive(addresser.get(), requester.get(), true)) {
+            ||
+            friendRepository.existsByRequesterAndAddresserAndIsActive(addresser.get(), requester.get(), true)) {
       throw new IllegalAccessException("You need to accept existing request");
     }
 
@@ -107,7 +111,7 @@ public class FriendService implements IFriendService {
 
 
     if (friendRequest.get().getStatus() == UserFriendStatus.REQUEST_SENT
-      || friendRequest.get().getStatus() == UserFriendStatus.REQUEST_RECEIVED) {
+            || friendRequest.get().getStatus() == UserFriendStatus.REQUEST_RECEIVED) {
       friendRequest.get().setStatus(UserFriendStatus.FRIEND);
       friendRepository.save(friendRequest.get());
 
@@ -161,11 +165,9 @@ public class FriendService implements IFriendService {
     }
 
     Optional<Friend> activeFriendship =
-            friendRepository.findByRequesterAndAddresserAndStatusAndIsActive(user.get(),
-                    friendUser.get(), UserFriendStatus.FRIEND, true);
-    Optional<Friend> activeFriendship1 =
-            friendRepository.findByRequesterAndAddresserAndStatusAndIsActive(friendUser.get(),
-                    user.get(),UserFriendStatus.FRIEND, true);
+            friendRepository.findFriendshipBetweenUsers(userId,
+                    friendUserId);
+
     if (activeFriendship.isPresent()) {
       Friend friend = activeFriendship.get();
       friend.setActive(false);
@@ -173,14 +175,6 @@ public class FriendService implements IFriendService {
       friendRepository.save(friend);
       return true;
     }
-    if (activeFriendship1.isPresent()) {
-      Friend friend = activeFriendship1.get();
-      friend.setActive(false);
-      friend.setStatus(UserFriendStatus.NOT_FRIEND);
-      friendRepository.save(friend);
-      return true;
-    }
-
 
     return false;
   }
@@ -188,22 +182,26 @@ public class FriendService implements IFriendService {
 
   @Transactional(readOnly = true)
   @Override
-  public List<FriendResponseDto> findAllFriends(Long userId, int page, int size) {
+  public PageWrapper<FriendResponseDto> findAllFriends(Long userId, int page, int size) {
     Sort sort = Sort.by(new Sort.Order(Sort.Direction.ASC, "id"));
     Pageable pageable = PageRequest.of(page, size, sort);
     Optional<User> user = userRepository.findById(userId);
 
     if (user.isEmpty()) {
-      return new ArrayList<>();
+      return new PageWrapper<>(new ArrayList<>(), false);
     }
 
     Page<Friend> friendsPage = friendRepository.findAllByRequesterOrAddresserAndStatus(
-      user.get(), user.get(), UserFriendStatus.FRIEND, pageable);
+            user.get(), user.get(), UserFriendStatus.FRIEND, pageable);
 
-    return friendsPage.getContent().stream()
+    boolean hasNext = friendsPage.hasNext();
+
+    List<FriendResponseDto> dtos = friendsPage.getContent().stream()
       .filter(friend -> friend.getStatus() == UserFriendStatus.FRIEND)
       .map(friend -> user.get().equals(friend.getRequester()) ? friend.getAddresser() : friend.getRequester())
-      .map(friendResponseMapper::convertToDto).collect(Collectors.toList());
+      .map(friendResponseMapper::convertToDto).toList();
+
+    return new PageWrapper<>(dtos, hasNext);
   }
 
 
@@ -249,11 +247,6 @@ public class FriendService implements IFriendService {
     return new CustomFriendResponse(content, hasNext);
   }
 
-
-
-
-
-
   public UserFriendStatus getFriendStatus(Long currentUserId, Long otherUserId) {
     Optional<Friend> friendship = friendRepository.findFriendshipBetweenUsers(currentUserId, otherUserId);
     return friendship.map(friend -> {
@@ -272,6 +265,64 @@ public class FriendService implements IFriendService {
     return friendRepository.countByRequesterAndStatus(userId, UserFriendStatus.REQUEST_SENT);
   }
 
+  @Override
+  public PageWrapper<FriendResponseDto> getRecommendations(int page, int size) {
+    final Long main = emailPasswordAuthProvider.getAuthenticationPrincipal();
+    List<Friend> friends = friendRepository.findAllByUserId(main);
+    List<Long> ids = new ArrayList<>();
+
+    for (Friend f : friends) {
+      if (Objects.equals(f.getAddresser().getId(), main)) {
+        ids.add(f.getRequester().getId());
+      } else if (Objects.equals(f.getRequester().getId(), main)) {
+        ids.add(f.getAddresser().getId());
+      }
+    }
+    List<Long> friendsIds = ids;
+    ids.add(main);
+
+    Sort sort = Sort.by(Sort.Direction.DESC, "lastModifiedDate").and(Sort.by(Sort.Direction.ASC, "id"));
+    Pageable pageable = PageRequest.of(page, size, sort);
+
+    Page<Friend> recommended = friendRepository
+            .findAllByFriendIdAndCity(friendsIds, ids, userRepository.findById(main).get().getCity(), pageable);
+
+    List<User> users = new ArrayList<>();
+    for (Friend f : recommended.toList()) {
+      if (ids.contains(f.getAddresser().getId())) {
+        users.add(f.getRequester());
+      } else {
+        users.add(f.getAddresser());
+      }
+    }
+    boolean hasNext = recommended.hasNext();
+
+    Page<Friend> recommendedNoCity;
+    if (recommended.toList().size() < size) {
+      pageable = PageRequest.of(page, size - recommended.toList().size(), sort);
+      recommendedNoCity = friendRepository
+              .findAllByFriendId(friendsIds, ids, pageable);
+
+      hasNext = recommendedNoCity.hasNext();
+
+      for (Friend f : recommendedNoCity.toList()) {
+        if (ids.contains(f.getAddresser().getId())) {
+          if (!users.contains(f.getRequester())) {
+            users.add(f.getRequester());
+          }
+        } else {
+          if (!users.contains(f.getAddresser())) {
+            users.add(f.getAddresser());
+          }
+        }
+      }
+    }
+
+    List<FriendResponseDto> dtos = users.stream().map(friendResponseMapper::convertToDto).toList();
+
+
+    return new PageWrapper<>(dtos, hasNext);
+  }
 
 }
 
